# qmamba

./: BUILDING.md  CMakeLists.txt  README.md  build_linux.sh  install.sh
conda_env/: environment-micromamba-static.yml
docs/: concepts.md  further-information.md  getting-started.md  introduction.md  learning-more.md  micromamba.md  reference.md  troubleshooting.md
examples/: readme.q
patches/: 09-06-2026.diff  14-05-2026.diff  16-06-2026.diff  18-05-2026.diff
q/: qmamba.q
src/: CommonOptions.cpp  CommonOptions.h  HelperFunctions.h  Options.h  OptionsParser.h  QMamba.cpp  QMamba.h  UMambaAuth.cpp  UMambaAuth.h  UMambaEnv.cpp  UMambaEnv.h
